zebra-rpc/src/methods/tests/snapshots/mainnet_get_address_balance.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 192
expression: address_balance
---
AddressBalance(
  balance: 687500,
)
