zebra-rpc/src/methods/tests/snapshots/mainnet_get_best_block_hash.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 206
expression: tip_hash
---
GetBestBlockHash("00074c46a4aa8172df8ae2ad1848a2e084e1b6989b7d9e6132adc938bf835b36")
