zebra-rpc/src/methods/tests/snapshots/mainnet_get_info.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 161
expression: info
---
GetInfo(
  build: "vRPC test",
  subversion: "[SubVersion]",
)
