zebra-rpc/src/methods/tests/snapshots/testnet_get_blockchain_info.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 177
expression: info
---
GetBlockChainInfo(
  chain: "main",
  blocks: Height(10),
  bestblockhash: "079f4c752729be63e6341ee9bce42fbbe37236aba22e3deb82405f3c2805c112",
  estimatedheight: "[Height]",
  upgrades: {
    ConsensusBranchIdHex("5ba81b19"): NetworkUpgradeInfo(
      name: Overwinter,
      activationheight: Height(347500),
      status: pending,
    ),
    ConsensusBranchIdHex("76b809bb"): NetworkUpgradeInfo(
      name: Sapling,
      activationheight: Height(419200),
      status: pending,
    ),
    ConsensusBranchIdHex("2bb40e60"): NetworkUpgradeInfo(
      name: Blossom,
      activationheight: Height(653600),
      status: pending,
    ),
    ConsensusBranchIdHex("f5b9230b"): NetworkUpgradeInfo(
      name: Heartwood,
      activationheight: Height(903000),
      status: pending,
    ),
    ConsensusBranchIdHex("e9ff75a6"): NetworkUpgradeInfo(
      name: Canopy,
      activationheight: Height(1046400),
      status: pending,
    ),
  },
  consensus: TipConsensusBranch(
    chaintip: ConsensusBranchIdHex("00000000"),
    nextblock: ConsensusBranchIdHex("00000000"),
  ),
)
